--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -184,10 +184,24 @@ harder than you might expect.
 
 ### More tables than views
 As I mentioned earlier, I didn't realize that this was possible to have more
-tables than views. I suspect that this means that the original dataset is private
-and that some views on that dataset are public. So these might be data publishers.
+tables than views. How does that happen?
 
-I looked at the users who had more tables than views.
+#### An example
+One case is [rseel](https://data.oregon.gov/profile/rseel/izyb-s78c?).
+He is the author behind a private table, and 
+[Cam Caldwell](http://www.socrata.com/company-info/leadership/), who works for Socrata, made 
+[this view](https://data.oregon.gov/Health-Human-Services/WIC-Authorized-Vendors/5ew8-h6d9?)
+based on that table. So some of the situations where people have tables but no views might
+occur because of private views; the original dataset is private, and some views on that
+dataset are public.
+
+We care about this because this might be a way of identifying people who work
+for data publishers. Considering that this private dataset is posted on Oregon's
+portal and that a Socrata employee made a view based on it, I suspect that rseel
+works for Oregon, or maybe Socrata.
+
+#### More users like this
+I looked at more of the users who had more tables than views.
 
     subset(users, n_tables > n_views)[c('displayName', 'roleName', 'flags', 'n_tables', 'n_views')]
 
@@ -197,33 +211,22 @@ I looked up a few of them with a search engine, and they mostly
 [be](http://www.linkedin.com/in/debraagagne)
 [government](http://www.whitehouse.gov/champions/technology-and-innovation/waldo-jaquith)
 [employees](http://waldo.jaquith.org/).
+So I think I can count people as employees of data publishers or Socrata
+if they have more tables than views.
 
-#### Private data
-An interesting case is
-[rseel](https://data.oregon.gov/profile/rseel/izyb-s78c?category=Recreation&utf8=%E2%9C%93&view_type=table).
-He is the author behind a private table, and 
-[Cam Caldwell](), a Socrata employee, made 
-[this view](https://data.oregon.gov/Health-Human-Services/WIC-Authorized-Vendors/5ew8-h6d9?)
-based on that table. So some of the situations where people have tables but no views might
-occur because of private views.
-
-### How can we find ordinary citizens?
-
-#### `roleName`
-You may have noticed that most of the people in the above tables have
-`roleName` fields. I think that people tend to have a `roleName` field
-if and only if they work for data publishers. To make that more clear,
-here's a table.
+### Role names
+I noticed that most of the people in the above list have
+`roleName` fields. Very few people have `roleName` fields, so
+I think that people tend to have a `roleName` field
+if and only if they work for data publishers. To investigate that, I made
+this table
 
 ```{r data_publishers}
 users$has.role <- !is.na(users$roleName)
-```
-
-```{r roleName_for_govt}
 table(users$n_tables > users$n_views, users$has.role)
 ```
 
-Here's a plot.
+and this plot of the same data.
 
 ```{r roleName_plot}
 users$more.tables <- users$n_tables > users$n_views
@@ -244,7 +247,11 @@ barplot(users.roleNames$prop[users.roleNames$more.tables],
 )
 ```
 
-And if we want to get all statistical about it, we can run
+People with roles tend to have more data than people without roles.
+If most data are published by data publishers, this also supports my
+suspician that people with `roleName` fields are data publishers.
+
+If we want to get all statistical about it, we can run
 Fisher's Exact test on that table.
 
 ```{r fisher_test}
@@ -255,8 +262,11 @@ and find that these counts are indeed disproportionate.
 
 This is all to say that **`roleName` appears to be a decent proxy for "data publisher"**.
 
-#### `flags`
+### Flags
 In a similar vein, I looked at Socrata users with a `flags` field.
+`sum(!is.na(users$flags))` users have a non-empty `flags` field, and
+the value of that field is `["admin"]` for all of these users.
+Here are those users.
 
 ```{r socrata_employees}
 users$has.flag <- !is.na(users$flags)
@@ -277,12 +287,13 @@ Socrata employees. I don't know why they have `roleName` fields.
 
 Anyway, it looks like the **`flags` field is a decent proxy for "Socrata employee"**.
 
-### Heavy users who work neither for government nor Socrata
+### Users who work neither for government nor Socrata
 If having a `flags` field means you work for Socrata and
 having a `roleName` means you work for a data publisher (a government, usually),
 then people with neither `flags` nor a `roleName` are the
 citizens that Socrata is trying to empower.
 
+#### No flags, no roles
 ```{r citizens}
 citizens <- subset(users, !has.flag & !has.role)
 columns <- c('displayName', 'n_tables', 'n_views')
@@ -295,6 +306,7 @@ appears to be [recovery.gov](http://www.recovery.gov)'s open data initiative,
 which is running on [opendata.socrata.com](https://opendata.socrata.com)
 rather than on a separate portal.
 
+#### Also no tables
 Maybe we should also expect citizens not to have uploaded any tables.
 
 ```{r citizens_2}
@@ -319,6 +331,7 @@ These charts are quite popular, and they account for a quarter of Kenya's open d
 Anyway, I see a pattern here: Users with the most views
 just made different filters on the same dataset.
 
+#### With a profile image
 Let's try this yet again, but this time, let's look only at people with profile images.
 
 ```{r citizens_3}
@@ -334,7 +347,6 @@ I ran queries like this to find what portals and data they used.
 
 They look more like real people doing real analysis.
 
-#### not The White House
 ![not The White House](images/not The White House.jpg)
 
 [not The White House](https://explore.data.gov/profile/not-The-White-House/732w-crxq)
@@ -350,7 +362,6 @@ not The White House also has its own separate website,
 [whitehouse.gov1.info](http://whitehouse.gov1.info/),
 which is a parody of the [official White House website](http://www.whitehouse.gov/).
 
-#### NL
 ![Picture of NL](<%= @item.identifier %>NL.jpg)
 
 [NL](https://finances.worldbank.org/profile/NL/aeze-ppu4)
@@ -360,8 +371,6 @@ She also has some views
 [on databox.worldbank.org](https://databox.worldbank.org/profile/NL/aeze-ppu4).
 Interestingly, that portal didn't show up in my list of Socrata portals.
 
-
-#### VinylFox
 ![Picture of VinylFox](<%= @item.identifier %>VinylFox.jpg)
 
 [VinylFox](https://data.baltimorecity.gov/profile/VinylFox/86yi-jydw?)
@@ -369,7 +378,6 @@ has also made a bunch of interesting filters on Baltimore data.
 His website discusses this [a bit more](http://www.vinylfox.com/about/).
 <!-- Talk to him. -->
 
-#### Dave Francis Rodrigues
 ![Picture of Dave Francis Rodrigues](<%= @item.identifier %>Dave Francis Rodrigues.jpg)
 
 [Dave](https://finances.worldbank.org/profile/Dave-Francis-Rodrigues/ef7y-9vvy?)
@@ -377,6 +385,12 @@ has made a lot of filters and charts about India.
 He also names his views really well. In particular, I like his hack of prefixing
 all of the titles with "Dave_"; this gets around how Socrata doesn't make it particularly
 clear who created the view that you are looking at.
+
+
+
+
+
+
 
 ### People mostly use one portal.
 When you make an account on any Socrata portal, you can use it to log in to
