--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -426,16 +426,15 @@ if we look at only the users whom I've identified as citizens, it drops
 to `sum(is.na(users$flags) & is.na(users$roleName) & users$n_tables == 0 & users$n_views >= 10)`,
 or fewer than one user per portal.
 
-
-
-
-
-
-
-
-
-
 ## Conclusions, lessons, ideas, &c.
+
+### API documentation
+Most of my work on this is still just in figuring out what the API fields mean and documenting them.
+Some of you reading this are probably building developer APIs, so keep this in
+mind: If you don't document your API fully, some random person might come along
+and document it for you, which might be highly embarrassing and/or highly convenient.
+
+Now on to some more serious conclusions.
 
 ### Big users
 Unsurprisingly, data publishers create lots of views. And Data.gov is crazy.
@@ -451,6 +450,22 @@ with them to see how they use Socrata in their research.
 
 On the other hand, maybe view count isn't the best metric of how intensely
 people use Socrata.
+
+### One portal
+Very few of the big users that I discuss above uses more than one Socrata portal.
+This certainly makes sense as Socrata open data portals are presented as if they're
+separate installations of the software. You can use the same account for all of the
+portals, but there's no obvious way to search across portals or get a list of all
+of the portals.
+
+I wonder whether people would use data from multiple portals if it were easier to
+search across portals. I think someone should set up a Socrata portal that
+federates all of the other portals; maybe people would use Socrata Open Data Portal
+software differently if they could easily collect and analyze data from all of the portals.
+
+On the other hand, maybe they wouldn't. A couple of the bigger users I found
+were using World Bank data, and it's quite possible that the data in the other portals
+aren't that relevant to them.
 
 ### People don't use Socrata that much. Or do they?
 If people are using Socrata's data analysis tools, we should expect lots of
@@ -485,36 +500,15 @@ There are a lot of situations where the analyst wants the analysis to stay priva
 but there are also a lot of situations where the analyst would love to share the
 analysis publicly if only it were easier.
 
-### One portal
-Very few of the big users that I discuss above uses more than one Socrata portal.
-This certainly makes sense as Socrata open data portals are presented as if they're
-separate installations of the software. You can use the same account for all of the
-portals, but there's no obvious way to search across portals or get a list of all
-of the portals.
-
-I wonder whether people would use data from multiple portals if it were easier to
-search across portals. I think someone should set up a Socrata portal that
-federates all of the other portals; maybe people would use Socrata Open Data Portal
-software differently if they could easily collect and analyze data from all of the portals.
-
-On the other hand, maybe they wouldn't. A couple of the bigger users I found
-were using World Bank data, and it's quite possible that the data in the other portals
-aren't that relevant to them.
-
-### We need to study usage more.
+## A request for data
 I managed to find a few interesting users, but I'm somewhat disappointed.
-The available data are quite coarse, few variables are exposed. There's apparently
-more in the administrator dashboard, like historical download counts and logs of
-when a person accessed a view that was embedded in another website.
+The available data are quite coarse, few variables are exposed.
 
 But portal administrators have do have access to these data! If you run a portal,
 you should be studying this in order to understand what data people are using,
-how people are using it and how you can improve your open data offerings. Actually,
-even better, you should just release the usage data publicly so I can do this for you.
-Socrata even has a feature that lets you do that automatically!
+how people are using it and how you can improve your open data offerings.
 
-### API documentation
-Most of my work on this is still just in figuring out what the API fields mean and documenting them.
-Some of you reading this are probably building developer APIs, so keep this in
-mind: If you don't document your API fully, some random person might come along
-and document it for you, which might be highly embarrassing and/or highly convenient.
+Actually, even better, you should just release the usage data publicly
+[like Oregon did]()
+so I can do this for you.
+Socrata even has a feature that lets you do that automatically!
