--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -1,7 +1,10 @@
 ---
-title: Who uses Socrata?
+title: Who uses Socrata's analysis tools?
 tweet_text: That time I downloaded all of the 80,000 @socrata datasets, I also downloaded the 10,000 users.
+twitter_title: People actually use @socrata's web-based analysis tools!
+twitter_description: "not The White House" discovered a @SecretService barbecue!
 ---
+
 ```{r configure, echo = F}
 opts_chunk$set(fig.width=10, fig.height=5, dpi = 42 * 5)
 ```
